[gd_scene format=3 uid="uid://xj824qmmsfdk"]

[ext_resource type="Script" uid="uid://ql7ag0lij4hb" path="res://Scripts/worm.gd" id="1_l5dqu"]
[ext_resource type="Texture2D" uid="uid://b70f2uxh6dqwn" path="res://Assets/characters/enemy1.png" id="1_skiwb"]
[ext_resource type="PackedScene" uid="uid://dip7l8ntmfd5f" path="res://Scenes/attack_area.tscn" id="3_n80vc"]
[ext_resource type="PackedScene" uid="uid://bav527wafvxn0" path="res://Scenes/stat_bar.tscn" id="4_x1856"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l5dqu"]
radius = 16.0
height = 85.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l5dqu"]
radius = 891.00507

[sub_resource type="Animation" id="Animation_l5dqu"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6.3999987)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.3, 0.275)]
}

[sub_resource type="Animation" id="Animation_n80vc"]
resource_name = "Move_Left"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6.3999987)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.3, 0.275)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.2617993877991494]
}

[sub_resource type="Animation" id="Animation_b7lw1"]
resource_name = "Move_Right"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6.3999987)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.3, 0.275)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.2617993877991494]
}

[sub_resource type="Animation" id="Animation_x1856"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.275)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x1856"]
_data = {
&"Idle": SubResource("Animation_l5dqu"),
&"Move_Left": SubResource("Animation_n80vc"),
&"Move_Right": SubResource("Animation_b7lw1"),
&"RESET": SubResource("Animation_x1856")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n80vc"]
radius = 22.0
height = 96.0

[node name="Worm" type="CharacterBody2D" unique_id=506971997]
motion_mode = 1
script = ExtResource("1_l5dqu")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1823119912]
scale = Vector2(0.3, 0.275)
texture = ExtResource("1_skiwb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1133993511]
position = Vector2(-6, -10.5)
shape = SubResource("CapsuleShape2D_l5dqu")

[node name="DetectionArea" type="Area2D" parent="." unique_id=731839810]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" unique_id=1213016233]
shape = SubResource("CircleShape2D_l5dqu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=773284765]
libraries/ = SubResource("AnimationLibrary_x1856")

[node name="WaitTimer" type="Timer" parent="." unique_id=1920457160]
one_shot = true
autostart = true

[node name="WonderTimer" type="Timer" parent="." unique_id=369140609]
wait_time = 2.5
one_shot = true

[node name="AttackArea" parent="." unique_id=150417490 instance=ExtResource("3_n80vc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" unique_id=1933567459]
position = Vector2(-6, -11)
shape = SubResource("CapsuleShape2D_n80vc")

[node name="StatBar" parent="." unique_id=834999668 instance=ExtResource("4_x1856")]
offset_left = -60.0
offset_top = -88.0
offset_right = -60.0
offset_bottom = -88.0
low_hp_pulse = false
damage_shake = false

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="WonderTimer" to="." method="_on_wonder_timer_timeout"]
